table-width fixed, word-wrap breakword

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -18,6 +18,8 @@ body {
 
 table {
   width: 100%;
+  table-layout:fixed;
+  word-wrap:break-word;
 }
 
 thead {
